--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,19 @@
 version: '3.3'
 
+volumes:
+  app-data:
+
 services:
   app:
     container_name: laravel-test-app
     # fpm port 9000
-    image: php:7.4-fpm
+    build:
+      dockerfile: ./docker/app/Dockerfile
+      context: .
     volumes:
       - "./:/app"
-      - "./storage:/app/storage"
+    depends_on:
+      - db
 
   nginx:
     container_name: laravel-test-nginx
@@ -17,5 +23,20 @@ services:
     volumes:
       - "./docker/nginx/app.conf:/etc/nginx/conf.d/default.conf"
       - "./public:/app/public"
-    links:
+    depends_on:
       - app
+
+  db:
+    container_name: laravel-test-db
+    image: mysql:latest
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    ports:
+      - "3307:3306"
+    volumes:
+      - "app-data:/var/lib/mysql"
+    environment:
+      MYSQL_DATABASE: "example"
+      MYSQL_USER: "example"
+      MYSQL_PASSWORD: "example"
+      MYSQL_ROOT_PASSWORD: "example"
